fix PrometheusExporterServiceIntTest